crates/cli/tests/snapshots/update__update_tests__update_check_reports_blocked_managed_resource.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "PV application: update available 0.2.5 -> 0.3.0 (darwin-arm64)\nPrivileged helper: current 1.0.0 (protocol 1)\nManaged Resources:\n  redis 8.8: blocked 8.8.0-pv1 (requires PV 0.5.0, current PV 0.1.0)\n",
    stderr: "",
}
