crates/cli/tests/snapshots/update__update_tests__update_check_reports_unavailable_managed_resource.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "PV application: update available 0.2.5 -> 0.3.0 (darwin-arm64)\nPrivileged helper: current 2.0.0 (protocol 2)\nManaged Resources:\n  redis 8.8: unavailable 8.8.0-pv1 (no installable artifact)\n",
    stderr: "",
}
