crates/cli/tests/snapshots/update__update_tests__update_checksum_mismatch_leaves_active_release_untouched.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV update\n",
    stderr: "error: PV app download checksum mismatch for `https://downloads.example.test/pv/0.2.0/pv-darwin-arm64`: expected <sha256>, got <sha256>\n",
}
