crates/cli/tests/snapshots/update__update_tests__update_downloads_and_activates_new_app_then_reexecs_managed_resource_continuation.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "PV update\nPrivileged helper: current 2.0.0 (protocol 2)\nPV application: updated 0.2.5 -> 0.3.0\nDaemon restarted and healthy\n",
        stderr: "",
    },
    [
        "0.2.5",
        "0.3.0",
    ],
)
