crates/cli/tests/snapshots/update__update_tests__update_fails_before_activation_when_launch_agent_is_not_pv_owned.snap
---
source: crates/cli/tests/update.rs
expression: snapshot
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "PV update\n",
    stderr: "error: PV LaunchAgent file is not PV-owned; leaving it unchanged at <launch-agent>\n",
}
